# insurance_prediction_with_fastApi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
config/: city_tier.py
model/: predict.py
schema/: predicted_response.py  user_input.py
