[project]
name = "insurance-premium-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
